Ajout auth jwt + schema user
